# python-microservice-template

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-entrypoint.sh  mypy.ini  pyproject.toml  tox.ini
app/: main.py
tests/: test_app.py
