[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["gdemarcsek <gyorgy.demarcsek@protonmail.ch>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.2"}


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.3.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
tox = "^4.5.2"
semgrep = "^1.23.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
